...
  "unitedStates": "미국",
  "japan": "일본",
  "unitedKingdom": "영국",
  "germany": "독일",
  "france": "프랑스",
  "australia": "호주",
  "eventCreateTitle": "일정 만들기",
  "eventEditTitle": "일정 편집",
  "save": "저장",
  "saving": "저장 중...",
  "cancel": "취소",
  "apply": "적용",
  "titleField": "제목",
  "locationField": "장소",
  "memoField": "메모",
...
